2012-08-29  Antonio Ceballos  <aceballos@gmail.com>

	* src/frontend/output.c: removed unused code.
	* src/frontend/genmove.c: removed unused code.
	* src/frontend/move.c: removed unused code.
	* src/frontend/atak.c: removed unused code.
	* src/frontend/solve.c: removed unused code.
	* src/frontend/common.h: removed unused code.
	* src/main.cc: removed unused code.
	* TODO: added some tasks

2012-03-05  Antonio Ceballos  <aceballos@gmail.com>

	* INSTALL: Remove reference to inexistent doc/README.

2012-03-04  Antonio Ceballos  <aceballos@gmail.com>

	Idea from Kamil Rytarowski <n54@gmx.com>
	* src/adapter/main.cpp: Open book file in read-only or read-write
	mode depending on BookLearn option false or ture, respectively.
	* src/adapter/adapter.cpp: Open book file in read-only or read-write
	mode depending on BookLearn option false or ture, respectively.
	* src/adapter/book.h: book_open() can open a book file in
	read-only or read-write mode.
	* src/adapter/book.cpp: book_open() can open a book file in
	read-only or read-write mode.

	* NEWS: Add the book open mode issue to the changes in version 6.0.2

2012-02-12  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: Fix version number in file heading.
	Increase size of string for the --addbook option.
	* src/components.cc: Fix version number in file heading.
	* src/components.h: Fix version number in file heading.
	* configure.ac: help for --addbook option.
	* NEWS: changes in version 6.0.2
	* test/README: record 6.0.1 ranking in FICS.
	* configure.ac: version 6.0.2

2012-02-06  Antonio Ceballos  <aceballos@gmail.com>

	* src/main.cc: new --addbook option to compile book and quit.
	* src/frontend/cmd.c: help for --addbook option.
	* doc/gnuchess.texi: info for --addbook option.

2011-12-26  Josef Reidinger  <jreidinger@suse.com>  (tiny change)

	* src/components.cc: add missing return in functions returning
	non-void.

2011-09-20  Antonio Ceballos  <aceballos@gmail.com>
